Создать форму Накладой. Обновить контекстные меню.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -15,7 +15,7 @@
 1 Ограничения при рассмотрении заявок: 
 	если заменен на аналог, то только передача
 	если остаток < требуемое количество, то закупка(но надо учесть замену)
-
+1 Удалить ненужные пункты из конктекстных меню
 
 Битлз
 3 DataError в таблице номенклатуры(отмена попытки добавления)
