--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -17,9 +17,12 @@
 	если остаток < требуемое количество, то закупка(но надо учесть замену)
 0 Доделать накладные
 0 Экспорт
+1 Статус "Обработана" для заявки на получение
+1 Вывести номер заявки в Форме заявки на приобретение
 
 Битлз
-3 DataError в таблице номенклатуры(отмена попытки добавления)
+
+5 DataError в таблице номенклатуры(отмена попытки добавления)
 
 Клад
 
