--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -15,7 +15,8 @@
 1 Ограничения при рассмотрении заявок: 
 	если заменен на аналог, то только передача
 	если остаток < требуемое количество, то закупка(но надо учесть замену)
-0 Доделать накладные
+1 Обновление статуса у заявки на приобретение
+1 Отображение состава заявки на приобретение во вкладке
 0 Экспорт
 1 Статус "Обработана" для заявки на получение
 1 Вывести номер заявки в Форме заявки на приобретение
